data/Java/10-missing-array-index/2/[M]Error.txt
*https://stackoverflow.com/questions/41626676/incompatible-type-int-cannot-be-converted-to-int-error
Program.java:10: error: incompatible types: String cannot be converted to String[]
                    names=n[i];
                           ^